# noir-paper-main

./: .gitignore  sync.sh
ansible/: .gitignore  book.yml  inventory.ini
loc/: .gitignore  README.md  aggregate.ipynb  cloc.csv  gzipped-size.sh  gzipped.csv  loc.csv
loc/batch/collisions/flink/: CarAccidents.java
loc/batch/collisions/mpi/: datatypes.cpp  datatypes.hpp  executor.cpp  executor.hpp  main.cpp  model.hpp  mpiutils.cpp  mpiutils.hpp  queries.cpp  queries.hpp
loc/batch/collisions/noir/: car_accidents.rs
loc/batch/connected-components/flink/: ConnectedComponents.java
loc/batch/connected-components/mpi/: main.cpp
loc/batch/connected-components/noir/: connected_components.rs
loc/batch/enum-triangles/flink/: EnumTriangles.java
loc/batch/enum-triangles/mpi/: main.cpp
loc/batch/enum-triangles/noir/: triangles_fold.rs
loc/batch/kmeans/flink/: Centroid.java  KMeans.java  SelectNearestCenter.java
loc/batch/kmeans/mpi/: main.cpp
loc/batch/pagerank-flink/flink/: PageRank.java
loc/batch/pagerank-flink/noir/: pagerank.rs
loc/batch/pagerank-mpi/mpi/: main.cpp
tools/: init-instance.sh
tools/bench-multi/: .gitignore  bench-multi.py  config.yaml  config_default.yaml  gen_csv.py  run_benchmarks.sh
tools/nexparse/: Cargo.toml
tools/nexparse/src/: main-flink.rs  main-noir-2.rs  main-noir.rs  main-regex.rs
tools/viz-loc/: plot-loc.ipynb
tools/viz-multi/: .gitignore  Makefile  aggregate_csv.py  make_plot.py  plot-multi.ipynb
tools/viz-nexmark/: plot-latency.ipynb  plot-nexmark.ipynb
tools/viz-single/: plot-single.ipynb
(+55 files in other folders)
